<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearnMaths</string>
    <string name="home_name">Learn Maths!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="title_activity_login">Login/Register</string>
    <string name="name_word">Name</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="username_word">Username</string>
    <string name="username_hint">Enter Your Username</string>
    <string name="password_word">Password</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="button_admin">Admin Profile</string>
    <string name="button_redo">Redo</string>
    <string name="button_nextCategory">Next Category</string>
    <string name="button_logout">Logout</string>
    <string name="next_level_title">Congratulations!</string>
    <string name="next_level_message">You finished all categories in this level. Go to the next!</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_quest">One Choice Quests</string>
    <string name="button_quit">Quit</string>
    <string name="title_activity_admin">Administration</string>
    <string name="error_title">Error</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_add">Add New</string>
    <string name="button_back">Back To Profile</string>
    <string name="questions_word">All Questions</string>
    <string name="question_word">Question</string>
    <string name="question_hint">Enter Question Text</string>
    <string name="answer_a_word">Answer A</string>
    <string name="answer_a_hint">Enter Answer A Text</string>
    <string name="answer_b_word">Answer B</string>
    <string name="answer_b_hint">Enter Answer B Text</string>
    <string name="answer_c_word">Answer C</string>
    <string name="answer_c_hint">Enter Answer C Text</string>
    <string name="correct_answer_word">Choose Correct Answer</string>
    <string name="a_word">A</string>
    <string name="b_word">B</string>
    <string name="c_word">C</string>
    <string name="category_word">Choose Question Category</string>
    <string name="title_activity_add">Add Question</string>
    <string name="title_activity_edit">Edit Question</string>
    <string name="delete_title">Confirm!</string>
    <string name="delete_message">Do you want to delete this question?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="title_activity_time">Time Quest</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="quest_choise_title">Choose!</string>
    <string name="quest_choise_message">What kind of quest do you prefer?</string>
    <string name="button_time">Time</string>
    <string name="button_one_choise">One Choice</string>

</resources>
